--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -46,6 +46,11 @@
     </form>
 
       </main>
+
+      <section class="welcome-text">
+        <span>Welcome back!</span>
+      </section>
+
       <%- include("../partials/footer")%> 
     <script src="/js/loginValidationForm.js"></script>
 </body>
