--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -5,7 +5,6 @@
   <%- include("../partials/head")%>
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/register.css">
-
 </head>
 
 <body>
@@ -79,10 +78,14 @@
 
     </main>
 
-    <script src="/js/registerValidationForm.js"></script>
+    <section class="welcome-text">
+      <span>Hi, Welcome!</span>
+    </section>
+      
+      
+      
 
-
+        <%- include("../partials/footer")%>
 </body>
-<%- include("../partials/footer")%>
 
 </html>
