Se ajustan los estilos de la pagina

--- a/public/css/productDetail2.css
+++ b/public/css/productDetail2.css
@@ -6,6 +6,11 @@
     
 }
 
+body{
+    display: flex;
+    flex-direction: column;
+}
+
 h4.elegir {
     margin: 10px;
     padding: 12px 0 0 20px;
