--- a/views/products/productById.ejs
+++ b/views/products/productById.ejs
@@ -9,7 +9,7 @@
 
 <body>
   <%- include("../partials/header")%>
-    <main>
+    <main style="height: 100vh;">
       <h4 class="elegir">ELEGI TU PROXIMA AVENTURA..</h4>
       <div class="allProducts">
         
