--- a/views/products/productCreate.ejs
+++ b/views/products/productCreate.ejs
@@ -11,7 +11,7 @@
 <body>
   <%- include("../partials/header")%>
 
-    <main class="main">
+    <main class="main" style="height: 100vh;">
       <form class="form" id="productForm" action="/products/create" method="post" enctype="multipart/form-data">
 
         <h2 class="form-title">Nuevo producto</h2>
