--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -14,7 +14,7 @@
 
 <body>
     <%- include("../partials/header")%>
-        <main>
+        <main style="height: 100vh;">
             <div class="profile">
             <img src="/img/uploads/avatars/<%=user.avatar%>" alt="<%user.avatar%>">
             <div>
