--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include("./partials/head")%>
   </head>
-  <body class="home" style="display: flex; flex-direction: column">
+  <body class="home" style="display: flex; flex-direction: column;">
     <%- include("./partials/header")%>
 
     <main id="home">
@@ -18,6 +18,6 @@
       
       </section>
     </main>
+    <div><%- include("./partials/footer")%></div>
   </body>
-  <div><%- include("./partials/footer")%></div>
 </html>
