--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -11,7 +11,7 @@
 <body>
   <%- include("../partials/header")%>
 
-    <main class="main">
+    <main class="main" style="height: 100vh;">
       <form class="form" id="editProductForm" action="/products/edit/<%=product.id%>?_method=PUT" method="post"
         enctype="multipart/form-data">
 
