--- a/views/products/productCreate.ejs
+++ b/views/products/productCreate.ejs
@@ -10,7 +10,7 @@
 
 <body>
   <%- include("../partials/header")%>
-
+  <h4 style="margin-top: 90px; margin-left: 20px;"><a href="/" class="badge-colorGris">Home</a>/<a href="/products" class="badge-colorGris">Reserva tu salto</a>/<strong>Crear producto</strong></h4>
     <main class="main" style="height: 100vh;">
       <form class="form" id="productForm" action="/products/create" method="post" enctype="multipart/form-data">
 
