--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -10,8 +10,8 @@
 <body>
   <%- include("../partials/header")%>
     <main>
-      <h5 style="margin: 10px; padding: 20px;"><a href="/">Home</a>/ Reserva tu salto</h5>
-      <h4 class="elegir">ELEGI TU PROXIMA AVENTURA..</h4>
+      <h4 style="margin: 10px; padding: 20px;"><a href="/" class="badge-colorGris">Home</a>/ <strong>Reserva tu salto</strong></h4>
+      <h4 class="elegantshadow textos-elegantes" style="text-align: left; font-size: 30px;">ELIGE TU PROXIMA AVENTURA</h4>
 
       <!--Creación de producto, solo podra ser visto por un usuario administrador.-->
       <% if (esAdministrador) { %>  
