--- a/public/css/productDetail2.css
+++ b/public/css/productDetail2.css
@@ -110,6 +110,63 @@ form.edit button  {
     background-color: #962420;
 }
 
+.elegantshadow {
+    color: #131313;
+    background-color: #ffffff;
+    letter-spacing: 0.15em;
+    text-shadow: 1px -1px 0 #767676, -1px 2px 1px #737272, -2px 4px 1px #767474,
+      -3px 6px 1px #787777, -4px 8px 1px #7b7a7a, -5px 10px 1px #7f7d7d,
+      -6px 12px 1px #828181, -7px 14px 1px #868585, -8px 16px 1px #8b8a89
+}
+
+.textos-elegantes {
+    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic,
+      "AppleGothic", sans-serif;
+    font-size: 40px;
+    padding-left: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    text-rendering: optimizeLegibility;
+}
+
+a.badge-colorGris:hover, a.badge-colorGris:focus {
+    color: #fff;
+    background-color: rgb(150, 36, 32);
+    border-radius: 5px;
+}
+
+a.badge-colorGris:focus, a.badge-colorGris.focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(180, 190, 201, 0.5);
+}
+
+a:link, a:visited, a:active {
+    text-decoration:none;
+    color: #434242;
+}
+
+@media (min-width: 320px) and (max-width: 765px){
+    
+
+    
+    .form-button{
+        
+        width: 40%;
+        height: 40px;
+        border-radius: 15px;
+        background-color: gray;
+        border: none;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        color: #fff;
+        transition: all 300ms;
+        cursor: pointer;
+        margin-top: 5%;
+        
+    }
+    
+} 
+
 @media (min-width: 769px) {
     div.allProducts {
         flex-direction: row;  
@@ -117,8 +174,8 @@ form.edit button  {
 
     div.allProducts article{
         width: 46%;
-}
-}
+    }
+}   
 
 @media (min-width: 1200px) {
     div.allProducts article{
