--- a/public/css/stylesCart.css
+++ b/public/css/stylesCart.css
@@ -166,7 +166,7 @@ main.cartBack1:hover div.filter#container{
 .info{
   color: rgb(114, 59, 59);
   font-family: cursive;
-  font-size: 40px;
+  font-size: 200%;
   text-align: center;
   margin-top: 20vh;
   opacity: 0.5;
