--- a/views/products/productById.ejs
+++ b/views/products/productById.ejs
@@ -10,7 +10,8 @@
 <body>
   <%- include("../partials/header")%>
     <main style="height: 100vh;">
-      <h4 class="elegir">ELEGI TU PROXIMA AVENTURA..</h4>
+      <h4 style="margin: 10px; padding: 20px;"><a href="/" class="badge-colorGris">Home</a>/<a href="/products" class="badge-colorGris">Reserva tu salto</a>/<strong>Detalle producto</strong></h4>
+      <h4 class="elegantshadow textos-elegantes">ADMINISTRAR PRODUCTO</h4>
       <div class="allProducts">
         
           <article>
