Se ajusta imagen en contrucción carrito de compras.

--- a/views/products/productCart.ejs
+++ b/views/products/productCart.ejs
@@ -13,7 +13,7 @@
         <main class="cartBack1">
             <div id="container" class="filter">
                 <div class="info">
-                    <h1>Paciencia,en Construcción :)</h1>
+                    <img src="/img/enConstruccion.png" alt="paracaidasCart">
                 </div>
             </div>
             <section id="paracaidasCart2">
