--- a/views/products/productById.ejs
+++ b/views/products/productById.ejs
@@ -11,7 +11,7 @@
   <%- include("../partials/header")%>
     <main style="height: 100vh;">
       <h4 style="margin: 10px; padding: 20px;"><a href="/" class="badge-colorGris">Home</a>/<a href="/products" class="badge-colorGris">Reserva tu salto</a>/<strong>Detalle producto</strong></h4>
-      <h4 class="elegantshadow textos-elegantes">ADMINISTRAR PRODUCTO</h4>
+      <h4 class="textos-elegantes">ADMINISTRAR PRODUCTO</h4>
       <div class="allProducts">
         
           <article>
